force-app/main/default/objects/Quality_Profile__mdt/Quality_Profile__mdt.object-meta.xml
<CustomObject>
    <label>Quality Profile</label>
    <pluralLabel>Quality Profiles</pluralLabel>
    <description>Defines quality thresholds and scoring profiles for quality gate evaluations.</description>
</CustomObject>