force-app/main/default/objects/Quality_Profile__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <label>Is Default</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is the default quality profile.</description>
</CustomField>