force-app/main/default/objects/Quality_Profile__mdt/fields/Max_Debt_Hours__c.field-meta.xml
<CustomField>
    <fullName>Max_Debt_Hours__c</fullName>
    <label>Max Debt Hours</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>Maximum allowable technical debt hours before the quality gate fails.</description>
</CustomField>