force-app/main/default/objects/Quality_Profile__mdt/fields/Min_Coverage_Pct__c.field-meta.xml
<CustomField>
    <fullName>Min_Coverage_Pct__c</fullName>
    <label>Min Coverage Pct</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Minimum code coverage percentage required to pass the quality gate.</description>
</CustomField>