force-app/main/default/objects/Quality_Profile__mdt/fields/Min_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_Quality_Score__c</fullName>
    <label>Min Quality Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Minimum quality score required to pass the quality gate.</description>
</CustomField>