force-app/main/default/objects/Quality_Profile__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <type>Text</type>
    <length>100</length>
    <description>Display name for this quality profile.</description>
</CustomField>